--- a/EclipseProg/Scouthis/res/layout/fragment_section_gps.xml
+++ b/EclipseProg/Scouthis/res/layout/fragment_section_gps.xml
@@ -24,8 +24,26 @@
         android:gravity="center_vertical|center_horizontal"
         android:orientation="vertical" >
 
+       <TextView
+            android:id="@+id/txtLat"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:text="Lat:"
+            android:layout_gravity="left"
+            android:textSize="12sp" />
+       
+       <TextView
+            android:id="@+id/txtLong"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:text="Long:"
+            android:layout_gravity="left"
+            android:textSize="12sp" />
+        
         <TextView
-            android:id="@+id/tvHeading1"
+            android:id="@+id/txtDegrees"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
