Some updates to GPS

--- a/EclipseProg/Scouthis/res/layout/fragment_section_launchpad.xml
+++ b/EclipseProg/Scouthis/res/layout/fragment_section_launchpad.xml
@@ -19,7 +19,7 @@
     android:layout_height="match_parent">
 
    	<TextView
-        android:id="@+id/textView1"
+        android:id="@+id/lblOrient"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Gli scout non sono mai stati così soddisfatti ;)"
@@ -31,7 +31,7 @@
         android:layout_gravity="center">
         
 	   <TextView
-	        android:id="@+id/textView2"
+	        android:id="@+id/txtOrient"
 	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content"
 	        android:text="Consiglio del giorno:"
@@ -49,14 +49,14 @@
             android:text="@string/demo_external_activity" />
         
        <TextView
-	        android:id="@+id/textView3"
+	        android:id="@+id/lblLatitude"
 	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content"
 	        android:text="Lo sapevi che..."
 	        android:textAppearance="?android:attr/textAppearanceMedium" />
 
        <TextView
-	        android:id="@+id/textView4"
+	        android:id="@+id/lblLongitude"
 	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content"
 	        android:text="Preferisco questo layout all'altro?"
