--- a/EclipseProg/Scouthis/res/layout/fragment_section_gps.xml
+++ b/EclipseProg/Scouthis/res/layout/fragment_section_gps.xml
@@ -5,12 +5,12 @@
     android:orientation="vertical" >
 
     <TextView
-        android:id="@+id/textView9"
+        android:id="@+id/lblDescription"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="5sp"
         android:layout_marginTop="10dp"
-        android:text="Dati GPS del telefono:"
+        android:text="Dati rilevati dal telefono:"
         android:textSize="18sp"
         android:textStyle="bold|italic" />
 
@@ -19,7 +19,7 @@
         android:layout_height="wrap_content" >
 
         <TableRow
-            android:id="@+id/tableRow2"
+            android:id="@+id/tblRow1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" >
 
@@ -27,38 +27,38 @@
                 android:id="@+id/lblDegrees"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
                 android:layout_weight="1"
+                android:gravity="center"
                 android:text="Gradi" />
 
             <TextView
-                android:id="@+id/textView1"
+                android:id="@+id/lblOrient"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
                 android:layout_weight="1"
+                android:gravity="center"
                 android:text="Orientamento" />
 
             <TextView
-                android:id="@+id/textView5"
+                android:id="@+id/lblSpeed"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
                 android:layout_weight="1"
+                android:gravity="center"
                 android:text="Velocità" />
 
             <TextView
-                android:id="@+id/textView7"
+                android:id="@+id/lblAccel"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
                 android:layout_weight="1"
-                android:text="Accel. (g)" />
+                android:gravity="center"
+                android:text="Accel.(g)" />
 
         </TableRow>
 
         <TableRow
-            android:id="@+id/tableRow3"
+            android:id="@+id/tblRow2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" >
 
@@ -66,35 +66,35 @@
                 android:id="@+id/txtDegrees"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
                 android:layout_weight="1"
+                android:gravity="center"
                 android:text="..."
                 android:textSize="24sp" />
 
             <TextView
-                android:id="@+id/textView2"
+                android:id="@+id/txtOrient"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
                 android:layout_weight="1"
+                android:gravity="center"
                 android:text="..."
                 android:textSize="24sp" />
 
             <TextView
-                android:id="@+id/textView6"
+                android:id="@+id/txtSpeed"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
                 android:layout_weight="1"
+                android:gravity="center"
                 android:text="300km/h"
                 android:textSize="24sp" />
 
             <TextView
-                android:id="@+id/textView8"
+                android:id="@+id/txtAccel"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
                 android:layout_weight="1"
+                android:gravity="center"
                 android:text="0.00"
                 android:textSize="24sp" />
 
@@ -115,52 +115,118 @@
         android:layout_height="wrap_content" >
 
         <TableRow
-            android:id="@+id/tableRow6"
+            android:id="@+id/tblRow3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" >
 
             <TextView
-                android:id="@+id/textView3"
-                android:layout_width="fill_parent"
+                android:id="@+id/lblLatitude"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_weight="1"
+                android:layout_weight="3"
+                android:gravity="center"
                 android:text="Latitudine" />
 
             <TextView
-                android:id="@+id/textView4"
-                android:layout_width="match_parent"
+                android:id="@+id/lblLongitude"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_weight="1"
+                android:layout_weight="3"
+                android:gravity="center"
                 android:text="Longitudine" />
+            
+			<TextView
+			    android:id="@+id/lblPrecision"
+			    android:layout_width="0dp"
+			    android:layout_height="wrap_content"
+			    android:layout_weight="2"
+			    android:gravity="center"
+			    android:text="Precisione" />
 
         </TableRow>
 
         <TableRow
-            android:id="@+id/tableRow7"
+            android:id="@+id/tblRow4"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" >
 
             <TextView
-                android:id="@+id/txtLat"
-                android:layout_width="fill_parent"
+                android:id="@+id/txtLatitude"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_weight="1"
-                android:text="...in attesa..."
+                android:layout_weight="3"
+                android:gravity="center"
+                android:text="...attesa..."
                 android:textSize="24sp" />
 
             <TextView
-                android:id="@+id/txtLong"
-                android:layout_width="match_parent"
+                android:id="@+id/txtLongitude"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_weight="1"
-                android:text="...in attesa..."
+                android:layout_weight="3"
+                android:gravity="center"
+                android:text="...attesa..."
                 android:textSize="24sp" />
+            
+			<TextView
+			    android:id="@+id/txtPrecision"
+			    android:layout_width="0dp"
+			    android:layout_height="wrap_content"
+			    android:layout_weight="2"
+			    android:gravity="center"
+			    android:text="..."
+			    android:textSize="24sp" />
 
         </TableRow>
+        
+    	<TableRow
+		    android:id="@+id/tblRow5"
+		    android:layout_width="wrap_content"
+		    android:layout_height="wrap_content" >
+			
+    	    <TextView
+                android:id="@+id/lblAltitude"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:text="Altitudine" />
+
+            <TextView
+                android:id="@+id/lblBearing"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:text="Direzione" />
+    	    
+		</TableRow>
+		
+    	<TableRow
+		    android:id="@+id/tblRow6"
+		    android:layout_width="wrap_content"
+		    android:layout_height="wrap_content" >
+			
+    	    <TextView
+                android:id="@+id/txtAltitude"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="center"
+			    android:text="...attesa..."
+			    android:textSize="24sp" />
+
+            <TextView
+                android:id="@+id/txtBearing"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="center"
+			    android:text="...attesa..."
+			    android:textSize="24sp" />
+    	    
+		</TableRow>
+		
     </TableLayout>
 
 </LinearLayout>
