--- a/EclipseProg/Scouthis/res/layout/fragment_section_lumus.xml
+++ b/EclipseProg/Scouthis/res/layout/fragment_section_lumus.xml
@@ -39,7 +39,7 @@
     	    </TableRow>
 
     	    <TableRow
-    	        android:id="@+id/tableRow2"
+    	        android:id="@+id/tblRow1"
     	        android:layout_width="wrap_content"
     	        android:layout_height="wrap_content" >
 
@@ -52,7 +52,7 @@
     	    </TableRow>
 
     	    <TableRow
-    	        android:id="@+id/tableRow3"
+    	        android:id="@+id/tblRow2"
     	        android:layout_width="wrap_content"
     	        android:layout_height="wrap_content" >
     	    </TableRow>
