--- a/EclipseProg/Scouthis/res/layout/fragment_section_findfriends.xml
+++ b/EclipseProg/Scouthis/res/layout/fragment_section_findfriends.xml
@@ -4,6 +4,12 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:orientation="vertical" >
+
+    <Button
+        android:id="@+id/btnLogout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Logout" />
     
     <fragment
         android:id="@+id/map"
