--- a/EclipseProg/Scouthis/res/values/dimens.xml
+++ b/EclipseProg/Scouthis/res/values/dimens.xml
@@ -3,5 +3,14 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
-
+	<dimen name="undo_bar_height">64dp</dimen>
+    <dimen name="undo_bar_padding">16dp</dimen>
+    <dimen name="undo_bar_outer_margin">24dp</dimen>
+    <dimen name="undo_bar_max_width">500dp</dimen>
+    <dimen name="divider_margin">8dp</dimen>
+    <dimen name="button_drawable_padding">12dp</dimen>
+    <dimen name="button_corner_radius">24dp</dimen>
+    <dimen name="activity_horizontal_margin">16dp</dimen>
+    <dimen name="activity_vertical_margin">16dp</dimen>
+    
 </resources>
