--- a/EclipseProg/Scouthis/res/layout/fragment_section_findfriends.xml
+++ b/EclipseProg/Scouthis/res/layout/fragment_section_findfriends.xml
@@ -5,6 +5,12 @@
     android:layout_height="fill_parent"
     android:orientation="vertical" >
 
+    <TextView
+        android:id="@+id/txtFFMessage"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="..." />
+
     <Button
         android:id="@+id/btnLogout"
         android:layout_width="wrap_content"
