--- a/EclipseProg/Scouthis/res/layout/fragment_section_findfriends.xml
+++ b/EclipseProg/Scouthis/res/layout/fragment_section_findfriends.xml
@@ -5,17 +5,31 @@
     android:layout_height="fill_parent"
     android:orientation="vertical" >
 
-    <TextView
-        android:id="@+id/txtFFMessage"
-        android:layout_width="wrap_content"
+    <TableLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="..." />
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp" >
 
-    <Button
-        android:id="@+id/btnLogout"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Logout" />
+        <TableRow
+            android:id="@+id/tableRow1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" >
+
+            <EditText
+                android:id="@+id/txtFFMessage"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1" />
+
+            <Button
+                android:id="@+id/btnLogInOut"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Logout" />
+
+        </TableRow>
+    </TableLayout>
     
     <fragment
         android:id="@+id/map"
