--- a/EclipseProg/Scouthis/res/layout/fragment_section_stepcounter.xml
+++ b/EclipseProg/Scouthis/res/layout/fragment_section_stepcounter.xml
@@ -35,7 +35,7 @@
             android:gravity="right|center_vertical" >
 
             <Button
-                android:id="@+id/btnLogout"
+                android:id="@+id/btnLogInOut"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Nuovo" />
