--- a/EclipseProg/Scouthis/res/layout/fragment_section_launchpad.xml
+++ b/EclipseProg/Scouthis/res/layout/fragment_section_launchpad.xml
@@ -1,67 +1,29 @@
-<!--
-  Copyright 2012 The Android Open Source Project
-  
-  Licensed under the Apache License, Version 2.0 (the "License");
-  you may not use this file except in compliance with the License.
-  You may obtain a copy of the License at
-  
-      http://www.apache.org/licenses/LICENSE-2.0
-  
-  Unless required by applicable law or agreed to in writing, software
-  distributed under the License is distributed on an "AS IS" BASIS,
-  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-  See the License for the specific language governing permissions and
-  limitations under the License.
-  -->
-
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical" >
 
-   	<TextView
-        android:id="@+id/lblOrient"
+    <TextView
+        android:id="@+id/lblNewsMessage"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Gli scout non sono mai stati così soddisfatti ;)"
+        android:text="..."
         android:textAppearance="?android:attr/textAppearanceMedium" />
-    
-    <LinearLayout android:orientation="vertical"
+
+    <Button
+        android:id="@+id/btnHomeReload"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center">
-        
-	   <TextView
-	        android:id="@+id/txtOrient"
-	        android:layout_width="wrap_content"
-	        android:layout_height="wrap_content"
-	        android:text="Consiglio del giorno:"
-	        android:textAppearance="?android:attr/textAppearanceMedium" />
+        android:layout_gravity="center"
+        android:text="Ricarica"
+        android:visibility="gone" />
 
-        <Button android:id="@+id/demo_collection_button"
-            android:layout_width="300dp"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="16dp"
-            android:text="@string/demo_collection"/>
+    <ListView
+        android:id="@+id/lstNews"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="5dp" >
 
-        <Button android:id="@+id/demo_external_activity"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/demo_external_activity" />
-        
-       <TextView
-	        android:id="@+id/lblLatitude"
-	        android:layout_width="wrap_content"
-	        android:layout_height="wrap_content"
-	        android:text="Lo sapevi che..."
-	        android:textAppearance="?android:attr/textAppearanceMedium" />
+    </ListView>
 
-       <TextView
-	        android:id="@+id/lblLongitude"
-	        android:layout_width="wrap_content"
-	        android:layout_height="wrap_content"
-	        android:text="Preferisco questo layout all'altro?"
-	        android:textAppearance="?android:attr/textAppearanceMedium" />
-
-    </LinearLayout>
-
-</FrameLayout>
+</LinearLayout>
