--- a/EclipseProg/Scouthis/res/layout/list_row.xml
+++ b/EclipseProg/Scouthis/res/layout/list_row.xml
@@ -4,7 +4,7 @@
     android:layout_width="fill_parent"
     android:layout_height="wrap_content" >
 
-     <!--LinearLayout
+     <LinearLayout
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:orientation="horizontal" >
@@ -18,7 +18,7 @@
          <LinearLayout
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
-             android:orientation="vertical" -->
+             android:orientation="vertical">
 
              <TextView
                  android:id="@+id/lblRSSItem"
@@ -31,8 +31,8 @@
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_below="@+id/lblRSSItem" />
-         <!--/LinearLayout>
+         </LinearLayout>
 
-     </LinearLayout-->
+     </LinearLayout>
 
 </RelativeLayout>
