--- a/EclipseProg/Scouthis/res/layout/alarms_undo_bar.xml
+++ b/EclipseProg/Scouthis/res/layout/alarms_undo_bar.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.jensdriller.libs.undobar.UndoBarView xmlns:android="http://schemas.android.com/apk/res/android"
+<it.poli.android.scoutthisme.undobar.UndoBarView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/undoBar"
     style="@style/Root" >
 
