Alarm WIP3 with some changes + unused code remov.

--- a/EclipseProg/Scouthis/res/layout/alarms_undo_bar.xml
+++ b/EclipseProg/Scouthis/res/layout/alarms_undo_bar.xml
@@ -16,4 +16,4 @@
         <TextView style="@style/Button" />
     </LinearLayout>
 
-</com.jensdriller.libs.undobar.UndoBarView>
+</it.poli.android.scoutthisme.undobar.UndoBarView>
