Strings correctly implemented

--- a/EclipseProg/Scouthis/res/layout/fragment_section_findfriends.xml
+++ b/EclipseProg/Scouthis/res/layout/fragment_section_findfriends.xml
@@ -1,22 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:orientation="vertical" >
 
     <TableLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="5dp"
-        android:layout_marginRight="5dp" >
+        android:layout_margin="5dp" >
 
         <TableRow
-            android:id="@+id/tableRow1"
+            android:id="@+id/tableRowFF1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" >
 
-            <EditText
+            <TextView
                 android:id="@+id/txtFFMessage"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -25,16 +24,15 @@
             <Button
                 android:id="@+id/btnLogInOut"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Logout" />
-
+                android:layout_height="wrap_content" />
         </TableRow>
     </TableLayout>
     
     <fragment
-        android:id="@+id/map"
+        android:id="@+id/mapFindFriends"
         android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:layout_margin="5dp" />
     
 </LinearLayout>
