--- a/EclipseProg/Scouthis/res/layout/fragment_section_gps.xml
+++ b/EclipseProg/Scouthis/res/layout/fragment_section_gps.xml
@@ -8,9 +8,10 @@
         android:id="@+id/lblDescription"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_margin="5dp"
         android:layout_marginBottom="5sp"
         android:layout_marginTop="10dp"
-        android:text="Dati rilevati dal telefono:"
+        android:text="@string/gps_information"
         android:textSize="18sp"
         android:textStyle="bold|italic" />
 
@@ -19,7 +20,7 @@
         android:layout_height="wrap_content" >
 
         <TableRow
-            android:id="@+id/tblRow1"
+            android:id="@+id/tableRowSG1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" >
 
@@ -29,7 +30,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:gravity="center"
-                android:text="Gradi" />
+                android:text="@string/gps_degrees" />
 
             <TextView
                 android:id="@+id/lblOrient"
@@ -37,7 +38,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:gravity="center"
-                android:text="Orientamento" />
+                android:text="@string/gps_orientation" />
 
             <TextView
                 android:id="@+id/lblSpeed"
@@ -45,7 +46,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:gravity="center"
-                android:text="Velocità" />
+                android:text="@string/gps_speed" />
 
             <TextView
                 android:id="@+id/lblAccel"
@@ -53,12 +54,12 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:gravity="center"
-                android:text="Accel.(g)" />
+                android:text="@string/gps_acceleration" />
 
         </TableRow>
 
         <TableRow
-            android:id="@+id/tblRow2"
+            android:id="@+id/tableRowSG2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" >
 
@@ -68,7 +69,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:gravity="center"
-                android:text="..."
+                android:text="@string/fragments_waiting_dots"
                 android:textSize="24sp" />
 
             <TextView
@@ -77,7 +78,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:gravity="center"
-                android:text="..."
+                android:text="@string/fragments_waiting_dots"
                 android:textSize="24sp" />
 
             <TextView
@@ -86,7 +87,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:gravity="center"
-                android:text="..."
+                android:text="@string/fragments_waiting_dots"
                 android:textSize="24sp" />
 
             <TextView
@@ -95,7 +96,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:gravity="center"
-                android:text="..."
+                android:text="@string/fragments_waiting_dots"
                 android:textSize="24sp" />
 
         </TableRow>
@@ -108,6 +109,7 @@
         android:layout_gravity="center"
         android:layout_marginBottom="10sp"
         android:layout_marginTop="10sp"
+        android:contentDescription="@string/gps_image_description"
         android:src="@drawable/img_compass" />
 
     <TableLayout
@@ -115,7 +117,7 @@
         android:layout_height="wrap_content" >
 
         <TableRow
-            android:id="@+id/tblRow3"
+            android:id="@+id/tableRowSG3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" >
 
@@ -125,7 +127,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="3"
                 android:gravity="center"
-                android:text="Latitudine" />
+                android:text="@string/gps_latitude" />
 
             <TextView
                 android:id="@+id/lblLongitude"
@@ -133,7 +135,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="3"
                 android:gravity="center"
-                android:text="Longitudine" />
+                android:text="@string/gps_longitude" />
             
 			<TextView
 			    android:id="@+id/lblPrecision"
@@ -141,12 +143,12 @@
 			    android:layout_height="wrap_content"
 			    android:layout_weight="2"
 			    android:gravity="center"
-			    android:text="Precisione" />
+			    android:text="@string/gps_precision" />
 
         </TableRow>
 
         <TableRow
-            android:id="@+id/tblRow4"
+            android:id="@+id/tableRowSG4"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" >
 
@@ -156,7 +158,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="3"
                 android:gravity="center"
-                android:text="..."
+                android:text="@string/fragments_waiting_dots"
                 android:textSize="24sp" />
 
             <TextView
@@ -165,7 +167,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="3"
                 android:gravity="center"
-                android:text="..."
+                android:text="@string/fragments_waiting_dots"
                 android:textSize="24sp" />
             
 			<TextView
@@ -174,23 +176,23 @@
 			    android:layout_height="wrap_content"
 			    android:layout_weight="2"
 			    android:gravity="center"
-			    android:text="..."
+			    android:text="@string/fragments_waiting_dots"
 			    android:textSize="24sp" />
 
         </TableRow>
         
     	<TableRow
-		    android:id="@+id/tblRow5"
-		    android:layout_width="wrap_content"
-		    android:layout_height="wrap_content" >
+    	    android:id="@+id/tableRowSG5"
+    	    android:layout_width="wrap_content"
+    	    android:layout_height="wrap_content" >
 			
     	    <TextView
-                android:id="@+id/lblAltitude"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:text="Altitudine" />
+    	        android:id="@+id/lblAltitude"
+    	        android:layout_width="0dp"
+    	        android:layout_height="wrap_content"
+    	        android:layout_weight="1"
+    	        android:gravity="center"
+    	        android:text="@string/gps_altitude" />
 
             <TextView
                 android:id="@+id/lblBearing"
@@ -198,14 +200,14 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:gravity="center"
-                android:text="Direzione" />
+                android:text="@string/gps_direction" />
     	    
 		</TableRow>
 		
     	<TableRow
-		    android:id="@+id/tblRow6"
-		    android:layout_width="wrap_content"
-		    android:layout_height="wrap_content" >
+    	    android:id="@+id/tableRowSG6"
+    	    android:layout_width="wrap_content"
+    	    android:layout_height="wrap_content" >
 			
     	    <TextView
     	        android:id="@+id/txtAltitude"
@@ -213,7 +215,7 @@
     	        android:layout_height="wrap_content"
     	        android:layout_weight="1"
     	        android:gravity="center"
-    	        android:text="..."
+    	        android:text="@string/fragments_waiting_dots"
     	        android:textSize="24sp" />
 
             <TextView
@@ -222,7 +224,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:gravity="center"
-                android:text="..."
+                android:text="@string/fragments_waiting_dots"
                 android:textSize="24sp" />
     	    
 		</TableRow>
