--- a/EclipseProg/Scouthis/res/layout/fragment_section_utility.xml
+++ b/EclipseProg/Scouthis/res/layout/fragment_section_utility.xml
@@ -31,7 +31,6 @@
         android:id="@+id/tglOnOff"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:text="ToggleButton" />
+        android:layout_gravity="center_horizontal" />
 
 </LinearLayout>
